--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -43,7 +43,8 @@ footer {
       }
   
       i {
-        margin-right: 1rem;
+        margin-right: 0.5rem;
+        width: 20px;
       }
     }
   }
